solver a min-height problem on small height devices

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -13,8 +13,6 @@
   align-items: center;
   text-align: center;
   //Diamensions
-  width: 100vw;
-  height: 100vh;
   //Position
   position: relative;
   //Margin, Padding
