--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -10,8 +10,6 @@
   justify-content: flex-start;
   align-items: center;
   //Diamensions
-  width: 100vw;
-  height: 100vh;
   //Position
   //Margin, Padding
   padding-top: 1rem;
