--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -7,8 +7,6 @@
   color: white;
   //Display
   //Diamensions
-  width: 100vw;
-  height: 100vh;
   //Position
   //Margin, Padding
   padding-top: 2rem;
